Fix image not display error
